--- a/ui/index.html
+++ b/ui/index.html
@@ -34,6 +34,7 @@
       <div><label>Template</label>
         <select id="templateName">
           <option value="europass" selected>europass</option>
+        <option value="kyndryl">Kyndryl (red sidebar)</option>
           <!-- add more templates later -->
         </select>
       </div>
