--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
   .card{background:#fff;border:1px solid var(--line);border-radius:12px;padding:16px;margin:12px 0;box-shadow:0 1px 2px rgba(0,0,0,.04)}
   .row{display:grid;grid-template-columns:1fr 1fr;gap:12px} label{display:block;font-size:12px;color:var(--muted);margin-bottom:6px}
   input,textarea,select{width:100%;padding:10px 12px;border:1px solid var(--line);border-radius:10px;background:#fff;font:inherit}
-  textarea{min-height:90px} .btn{appearance:none;border:0;background:var(--brand);color:#fff;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer}
+  textarea{min-height:90px} .btn{appearance:none;border:0;background:var(--brand);color:#0f172a;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer}
   .btn.secondary{background:#1118270d;color:#111827} .btn:disabled{opacity:.6;cursor:not-allowed} .toolbar{display:flex;flex-wrap:wrap;gap:8px}
   .list{display:grid;gap:12px} .item{border:1px dashed var(--line);border-radius:10px;padding:12px}
   .log{background:#0b1020;color:#d1d5db;font:12px/1.5 ui-monospace,Menlo,Consolas;padding:12px;border-radius:8px;max-height:240px;overflow:auto;white-space:pre-wrap}
@@ -274,11 +274,11 @@ function renderTemplate(name, cv){
   if (t === "kyndryl") {
     // recolor sidebar to Kyndryl red + white text; keep main column dark on white
     let html = tpl_europass(cv)
-      .replace(/background:var\(--side\)/g, 'background:#c4122f;color:#fff;border-right:1px solid #a60f24');
+      .replace(/background:var\(--side\)/g, 'background:#c4122f;color:#0f172a;border-right:1px solid #a60f24');
     // sidebar icons to white-ish
     html = html.replace(/background:#e2e8f0/g, 'background:rgba(255,255,255,.18);color:#fff');
     // chips in sidebar to white-on-red
-    html = html.replace(/\.eu-chip\{[^}]*\}/, '.eu-chip{display:inline-block;background:rgba(255,255,255,.18);color:#fff;border:1px solid rgba(255,255,255,.28);border-radius:999px;padding:3px 10px;margin:3px 6px 0 0;font-size:11px}');
+    html = html.replace(/\.eu-chip\{[^}]*\}/, '.eu-chip{display:inline-block;background:rgba(255,255,255,.18);color:#0f172a;border:1px solid rgba(255,255,255,.28);border-radius:999px;padding:3px 10px;margin:3px 6px 0 0;font-size:11px}');
     return html; // .eu-main remains color:#0f172a
   }
   return tpl_europass(cv);
